--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdftotext": "^1.3.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-to-pdf": "^1.0.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
