--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-pdftotext": "^1.3.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-share": "^5.1.0",
     "react-to-pdf": "^1.0.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
